# zato-testing-demo

./: Makefile  README.md  conftest.py  pyproject.toml
src/demo/services/: crm.py
tests/: test_crm.py
